// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`a back to top component with background prop set to false renders correctly 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": .emotion-0 {
  height: 0;
  position: -webkit-sticky;
  position: sticky;
  bottom: 0;
  z-index: 2999;
}

.emotion-2 {
  visibility: hidden;
  opacity: 0;
  position: absolute;
  bottom: 0;
  right: 0;
  -webkit-transition: visibility 200ms cubic-bezier(0.550,0.085,0.68,0.530),opacity 200ms cubic-bezier(0.550,0.085,0.68,0.530);
  transition: visibility 200ms cubic-bezier(0.550,0.085,0.68,0.530),opacity 200ms cubic-bezier(0.550,0.085,0.68,0.530);
}

@media screen and (min-width:992px) {
  .emotion-2 {
    right: 3rem;
  }
}

.emotion-6 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: transparent;
  border: none;
  box-sizing: border-box;
  color: inherit;
  cursor: pointer;
  font: inherit;
  -webkit-letter-spacing: .24em;
  -moz-letter-spacing: .24em;
  -ms-letter-spacing: .24em;
  letter-spacing: .24em;
  line-height: 4rem;
  margin: 0;
  max-height: 4.4rem;
  opacity: 1;
  overflow: hidden;
  padding: 0 3.5rem;
  text-transform: uppercase;
  -webkit-transition-property: opacity;
  transition-property: opacity;
  width: auto;
  -moz-osx-font-smoothing: inherit;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  -webkit-font-smoothing: inherit;
  -webkit-backface-visibility: hidden;
  background-color: #3150A2;
  border: 0.2rem solid #3150A2;
  color: #FFFFFF;
  font-family: GT Pressura Web,Arial Narrow,Arial,sans-serif;
  font-size: 1.2rem;
  -webkit-transition-duration: 400ms;
  transition-duration: 400ms;
  -webkit-transition-timing-function: cubic-bezier(0.390,0.575,0.565,1.000);
  transition-timing-function: cubic-bezier(0.390,0.575,0.565,1.000);
  background: transparent;
  border: 0.2rem solid #FFFFFF;
  color: #3150A2;
  -webkit-letter-spacing: .2em;
  -moz-letter-spacing: .2em;
  -ms-letter-spacing: .2em;
  letter-spacing: .2em;
  padding: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #FFFFFF;
  border: 0;
  bottom: 0;
  color: #3150A2;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  left: 0;
  margin-bottom: 1.5rem;
  padding-top: 1rem;
  max-height: -webkit-fit-content;
  max-height: -moz-fit-content;
  max-height: fit-content;
  outline: 0;
  width: 6rem;
}

.emotion-6:active {
  outline: 0;
}

.emotion-6:hover {
  opacity: 0.75;
}

.emotion-6[disabled] {
  cursor: not-allowed;
  opacity: .5;
}

.emotion-6 svg {
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  fill: transparent;
  stroke: #3150A2;
  height: 2.7rem;
  width: 2.7rem;
  margin-right: 1rem;
}

.emotion-6 svg {
  -webkit-transform: rotate(-90deg);
  -ms-transform: rotate(-90deg);
  transform: rotate(-90deg);
  margin: 0;
  stroke: #3150A2;
}

.emotion-6 svg path {
  -webkit-transform: translate3d(0,0,0);
  -ms-transform: translate3d(0,0,0);
  transform: translate3d(0,0,0);
}

.emotion-6 i {
  margin-top: 0.5rem;
  line-height: 1.5;
}

.emotion-6:focus svg path,
.emotion-6:hover svg path,
.emotion-6:active svg path {
  -webkit-animation: arrow-head;
  animation: arrow-head;
  -webkit-animation-duration: 600ms;
  animation-duration: 600ms;
  -webkit-animation-timing-function: cubic-bezier(0.15,0.8,0.3,1.2);
  animation-timing-function: cubic-bezier(0.15,0.8,0.3,1.2);
  -webkit-animation-delay: 0s;
  animation-delay: 0s;
  -webkit-animation-iteration-count: 1;
  animation-iteration-count: 1;
  -webkit-animation-direction: normal;
  animation-direction: normal;
  -webkit-animation-fill-mode: forwards;
  animation-fill-mode: forwards;
  -webkit-animation-play-state: running;
  animation-play-state: running;
}

.emotion-10 {
  font-family: GT Pressura Web,Arial Narrow,Arial,sans-serif;
  font-size: 1.2rem;
}

<body>
    <div>
      <div
        class="emotion-0 emotion-1"
        data-test-id="BackToTop"
      >
        <span
          class="emotion-2 emotion-3"
        >
          <button
            class=" emotion-4 emotion-5 emotion-6 emotion-7"
            data-test-id="IconButton"
            type="button"
          >
            <svg
              class="emotion-8 emotion-9"
              data-test-id="Icon"
              stroke-width="3"
            />
            <i
              class="emotion-10 emotion-11"
            >
              To Top
            </i>
          </button>
        </span>
      </div>
    </div>
  </body>,
  "container": .emotion-0 {
  height: 0;
  position: -webkit-sticky;
  position: sticky;
  bottom: 0;
  z-index: 2999;
}

.emotion-2 {
  visibility: hidden;
  opacity: 0;
  position: absolute;
  bottom: 0;
  right: 0;
  -webkit-transition: visibility 200ms cubic-bezier(0.550,0.085,0.68,0.530),opacity 200ms cubic-bezier(0.550,0.085,0.68,0.530);
  transition: visibility 200ms cubic-bezier(0.550,0.085,0.68,0.530),opacity 200ms cubic-bezier(0.550,0.085,0.68,0.530);
}

@media screen and (min-width:992px) {
  .emotion-2 {
    right: 3rem;
  }
}

.emotion-6 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: transparent;
  border: none;
  box-sizing: border-box;
  color: inherit;
  cursor: pointer;
  font: inherit;
  -webkit-letter-spacing: .24em;
  -moz-letter-spacing: .24em;
  -ms-letter-spacing: .24em;
  letter-spacing: .24em;
  line-height: 4rem;
  margin: 0;
  max-height: 4.4rem;
  opacity: 1;
  overflow: hidden;
  padding: 0 3.5rem;
  text-transform: uppercase;
  -webkit-transition-property: opacity;
  transition-property: opacity;
  width: auto;
  -moz-osx-font-smoothing: inherit;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  -webkit-font-smoothing: inherit;
  -webkit-backface-visibility: hidden;
  background-color: #3150A2;
  border: 0.2rem solid #3150A2;
  color: #FFFFFF;
  font-family: GT Pressura Web,Arial Narrow,Arial,sans-serif;
  font-size: 1.2rem;
  -webkit-transition-duration: 400ms;
  transition-duration: 400ms;
  -webkit-transition-timing-function: cubic-bezier(0.390,0.575,0.565,1.000);
  transition-timing-function: cubic-bezier(0.390,0.575,0.565,1.000);
  background: transparent;
  border: 0.2rem solid #FFFFFF;
  color: #3150A2;
  -webkit-letter-spacing: .2em;
  -moz-letter-spacing: .2em;
  -ms-letter-spacing: .2em;
  letter-spacing: .2em;
  padding: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #FFFFFF;
  border: 0;
  bottom: 0;
  color: #3150A2;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  left: 0;
  margin-bottom: 1.5rem;
  padding-top: 1rem;
  max-height: -webkit-fit-content;
  max-height: -moz-fit-content;
  max-height: fit-content;
  outline: 0;
  width: 6rem;
}

.emotion-6:active {
  outline: 0;
}

.emotion-6:hover {
  opacity: 0.75;
}

.emotion-6[disabled] {
  cursor: not-allowed;
  opacity: .5;
}

.emotion-6 svg {
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  fill: transparent;
  stroke: #3150A2;
  height: 2.7rem;
  width: 2.7rem;
  margin-right: 1rem;
}

.emotion-6 svg {
  -webkit-transform: rotate(-90deg);
  -ms-transform: rotate(-90deg);
  transform: rotate(-90deg);
  margin: 0;
  stroke: #3150A2;
}

.emotion-6 svg path {
  -webkit-transform: translate3d(0,0,0);
  -ms-transform: translate3d(0,0,0);
  transform: translate3d(0,0,0);
}

.emotion-6 i {
  margin-top: 0.5rem;
  line-height: 1.5;
}

.emotion-6:focus svg path,
.emotion-6:hover svg path,
.emotion-6:active svg path {
  -webkit-animation: arrow-head;
  animation: arrow-head;
  -webkit-animation-duration: 600ms;
  animation-duration: 600ms;
  -webkit-animation-timing-function: cubic-bezier(0.15,0.8,0.3,1.2);
  animation-timing-function: cubic-bezier(0.15,0.8,0.3,1.2);
  -webkit-animation-delay: 0s;
  animation-delay: 0s;
  -webkit-animation-iteration-count: 1;
  animation-iteration-count: 1;
  -webkit-animation-direction: normal;
  animation-direction: normal;
  -webkit-animation-fill-mode: forwards;
  animation-fill-mode: forwards;
  -webkit-animation-play-state: running;
  animation-play-state: running;
}

.emotion-10 {
  font-family: GT Pressura Web,Arial Narrow,Arial,sans-serif;
  font-size: 1.2rem;
}

<div>
    <div
      class="emotion-0 emotion-1"
      data-test-id="BackToTop"
    >
      <span
        class="emotion-2 emotion-3"
      >
        <button
          class=" emotion-4 emotion-5 emotion-6 emotion-7"
          data-test-id="IconButton"
          type="button"
        >
          <svg
            class="emotion-8 emotion-9"
            data-test-id="Icon"
            stroke-width="3"
          />
          <i
            class="emotion-10 emotion-11"
          >
            To Top
          </i>
        </button>
      </span>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`a back to top component with background prop set to true renders correctly 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": .emotion-0 {
  height: 0;
  position: -webkit-sticky;
  position: sticky;
  bottom: 0;
  z-index: 2999;
}

.emotion-2 {
  visibility: hidden;
  opacity: 0;
  position: absolute;
  bottom: 0;
  right: 0;
  -webkit-transition: visibility 200ms cubic-bezier(0.550,0.085,0.68,0.530),opacity 200ms cubic-bezier(0.550,0.085,0.68,0.530);
  transition: visibility 200ms cubic-bezier(0.550,0.085,0.68,0.530),opacity 200ms cubic-bezier(0.550,0.085,0.68,0.530);
}

@media screen and (min-width:992px) {
  .emotion-2 {
    right: 3rem;
  }
}

.emotion-6 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: transparent;
  border: none;
  box-sizing: border-box;
  color: inherit;
  cursor: pointer;
  font: inherit;
  -webkit-letter-spacing: .24em;
  -moz-letter-spacing: .24em;
  -ms-letter-spacing: .24em;
  letter-spacing: .24em;
  line-height: 4rem;
  margin: 0;
  max-height: 4.4rem;
  opacity: 1;
  overflow: hidden;
  padding: 0 3.5rem;
  text-transform: uppercase;
  -webkit-transition-property: opacity;
  transition-property: opacity;
  width: auto;
  -moz-osx-font-smoothing: inherit;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  -webkit-font-smoothing: inherit;
  -webkit-backface-visibility: hidden;
  background-color: #3150A2;
  border: 0.2rem solid #3150A2;
  color: #FFFFFF;
  font-family: GT Pressura Web,Arial Narrow,Arial,sans-serif;
  font-size: 1.2rem;
  -webkit-transition-duration: 400ms;
  transition-duration: 400ms;
  -webkit-transition-timing-function: cubic-bezier(0.390,0.575,0.565,1.000);
  transition-timing-function: cubic-bezier(0.390,0.575,0.565,1.000);
  background: transparent;
  border: 0.2rem solid #FFFFFF;
  color: #3150A2;
  -webkit-letter-spacing: .2em;
  -moz-letter-spacing: .2em;
  -ms-letter-spacing: .2em;
  letter-spacing: .2em;
  padding: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #FAEFD9;
  border: 0;
  bottom: 0;
  color: #3150A2;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  left: 0;
  margin-bottom: 1.5rem;
  padding-top: 1rem;
  max-height: -webkit-fit-content;
  max-height: -moz-fit-content;
  max-height: fit-content;
  outline: 0;
  width: 6rem;
}

.emotion-6:active {
  outline: 0;
}

.emotion-6:hover {
  opacity: 0.75;
}

.emotion-6[disabled] {
  cursor: not-allowed;
  opacity: .5;
}

.emotion-6 svg {
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  fill: transparent;
  stroke: #3150A2;
  height: 2.7rem;
  width: 2.7rem;
  margin-right: 1rem;
}

.emotion-6 svg {
  -webkit-transform: rotate(-90deg);
  -ms-transform: rotate(-90deg);
  transform: rotate(-90deg);
  margin: 0;
  stroke: #3150A2;
}

.emotion-6 svg path {
  -webkit-transform: translate3d(0,0,0);
  -ms-transform: translate3d(0,0,0);
  transform: translate3d(0,0,0);
}

.emotion-6 i {
  margin-top: 0.5rem;
  line-height: 1.5;
}

.emotion-6:focus svg path,
.emotion-6:hover svg path,
.emotion-6:active svg path {
  -webkit-animation: arrow-head;
  animation: arrow-head;
  -webkit-animation-duration: 600ms;
  animation-duration: 600ms;
  -webkit-animation-timing-function: cubic-bezier(0.15,0.8,0.3,1.2);
  animation-timing-function: cubic-bezier(0.15,0.8,0.3,1.2);
  -webkit-animation-delay: 0s;
  animation-delay: 0s;
  -webkit-animation-iteration-count: 1;
  animation-iteration-count: 1;
  -webkit-animation-direction: normal;
  animation-direction: normal;
  -webkit-animation-fill-mode: forwards;
  animation-fill-mode: forwards;
  -webkit-animation-play-state: running;
  animation-play-state: running;
}

.emotion-10 {
  font-family: GT Pressura Web,Arial Narrow,Arial,sans-serif;
  font-size: 1.2rem;
}

<body>
    <div>
      <div
        class="emotion-0 emotion-1"
        data-test-id="BackToTop"
      >
        <span
          class="emotion-2 emotion-3"
        >
          <button
            class=" emotion-4 emotion-5 emotion-6 emotion-7"
            data-test-id="IconButton"
            type="button"
          >
            <svg
              class="emotion-8 emotion-9"
              data-test-id="Icon"
              stroke-width="3"
            />
            <i
              class="emotion-10 emotion-11"
            >
              To Top
            </i>
          </button>
        </span>
      </div>
    </div>
  </body>,
  "container": .emotion-0 {
  height: 0;
  position: -webkit-sticky;
  position: sticky;
  bottom: 0;
  z-index: 2999;
}

.emotion-2 {
  visibility: hidden;
  opacity: 0;
  position: absolute;
  bottom: 0;
  right: 0;
  -webkit-transition: visibility 200ms cubic-bezier(0.550,0.085,0.68,0.530),opacity 200ms cubic-bezier(0.550,0.085,0.68,0.530);
  transition: visibility 200ms cubic-bezier(0.550,0.085,0.68,0.530),opacity 200ms cubic-bezier(0.550,0.085,0.68,0.530);
}

@media screen and (min-width:992px) {
  .emotion-2 {
    right: 3rem;
  }
}

.emotion-6 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: transparent;
  border: none;
  box-sizing: border-box;
  color: inherit;
  cursor: pointer;
  font: inherit;
  -webkit-letter-spacing: .24em;
  -moz-letter-spacing: .24em;
  -ms-letter-spacing: .24em;
  letter-spacing: .24em;
  line-height: 4rem;
  margin: 0;
  max-height: 4.4rem;
  opacity: 1;
  overflow: hidden;
  padding: 0 3.5rem;
  text-transform: uppercase;
  -webkit-transition-property: opacity;
  transition-property: opacity;
  width: auto;
  -moz-osx-font-smoothing: inherit;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  -webkit-font-smoothing: inherit;
  -webkit-backface-visibility: hidden;
  background-color: #3150A2;
  border: 0.2rem solid #3150A2;
  color: #FFFFFF;
  font-family: GT Pressura Web,Arial Narrow,Arial,sans-serif;
  font-size: 1.2rem;
  -webkit-transition-duration: 400ms;
  transition-duration: 400ms;
  -webkit-transition-timing-function: cubic-bezier(0.390,0.575,0.565,1.000);
  transition-timing-function: cubic-bezier(0.390,0.575,0.565,1.000);
  background: transparent;
  border: 0.2rem solid #FFFFFF;
  color: #3150A2;
  -webkit-letter-spacing: .2em;
  -moz-letter-spacing: .2em;
  -ms-letter-spacing: .2em;
  letter-spacing: .2em;
  padding: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #FAEFD9;
  border: 0;
  bottom: 0;
  color: #3150A2;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  left: 0;
  margin-bottom: 1.5rem;
  padding-top: 1rem;
  max-height: -webkit-fit-content;
  max-height: -moz-fit-content;
  max-height: fit-content;
  outline: 0;
  width: 6rem;
}

.emotion-6:active {
  outline: 0;
}

.emotion-6:hover {
  opacity: 0.75;
}

.emotion-6[disabled] {
  cursor: not-allowed;
  opacity: .5;
}

.emotion-6 svg {
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  fill: transparent;
  stroke: #3150A2;
  height: 2.7rem;
  width: 2.7rem;
  margin-right: 1rem;
}

.emotion-6 svg {
  -webkit-transform: rotate(-90deg);
  -ms-transform: rotate(-90deg);
  transform: rotate(-90deg);
  margin: 0;
  stroke: #3150A2;
}

.emotion-6 svg path {
  -webkit-transform: translate3d(0,0,0);
  -ms-transform: translate3d(0,0,0);
  transform: translate3d(0,0,0);
}

.emotion-6 i {
  margin-top: 0.5rem;
  line-height: 1.5;
}

.emotion-6:focus svg path,
.emotion-6:hover svg path,
.emotion-6:active svg path {
  -webkit-animation: arrow-head;
  animation: arrow-head;
  -webkit-animation-duration: 600ms;
  animation-duration: 600ms;
  -webkit-animation-timing-function: cubic-bezier(0.15,0.8,0.3,1.2);
  animation-timing-function: cubic-bezier(0.15,0.8,0.3,1.2);
  -webkit-animation-delay: 0s;
  animation-delay: 0s;
  -webkit-animation-iteration-count: 1;
  animation-iteration-count: 1;
  -webkit-animation-direction: normal;
  animation-direction: normal;
  -webkit-animation-fill-mode: forwards;
  animation-fill-mode: forwards;
  -webkit-animation-play-state: running;
  animation-play-state: running;
}

.emotion-10 {
  font-family: GT Pressura Web,Arial Narrow,Arial,sans-serif;
  font-size: 1.2rem;
}

<div>
    <div
      class="emotion-0 emotion-1"
      data-test-id="BackToTop"
    >
      <span
        class="emotion-2 emotion-3"
      >
        <button
          class=" emotion-4 emotion-5 emotion-6 emotion-7"
          data-test-id="IconButton"
          type="button"
        >
          <svg
            class="emotion-8 emotion-9"
            data-test-id="Icon"
            stroke-width="3"
          />
          <i
            class="emotion-10 emotion-11"
          >
            To Top
          </i>
        </button>
      </span>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
